<resources>
    <string name="app_name">#Thirsty</string>
    <string name="emptyString" />
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="welcome">Welcome,</string>
    <string name="logout">Logout</string>
    <string name="try_again">Try Again</string>
    <string name="try_message">Please try again or register</string>
    <string name="incorrect">You have entered an incorrect username or password</string>
    <string name="title_activity_registration_screen">registration_screen</string>
    <string name="userInfo" />
    <string name="title_activity_maps">Map</string>
    <string name="viewMap">View Map</string>
    <string name="viewReport">View Reports</string>
    <string name="submitReport">Submit Report</string>
    <string name="viewProfile">View Profile</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="waterCondition">Water Condition: </string>
    <string name="waterType">Water Type: </string>
    <string name="reportNumber">Report #</string>
    <string name="location">Location: </string>
    <string name="updatePass">Update Password</string>
    <string name="updateEmail">Update Email</string>
    <string name="newEmail">New Email: </string>
    <string name="home">Home</string>
    <string name="title_activity_history_input">HistoryInput</string>

</resources>

