<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_successful_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.example.user.thirsty.Successful_login">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/emptyString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView3"
        android:id="@+id/TVusername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_info"
        android:text="@string/userInfo"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/TVusername"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/updateEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_email"
        android:onClick="onButtonClick"
        android:background="@color/seaGreen"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="22dp"
        android:layout_alignBaseline="@+id/edit_password"
        android:layout_alignBottom="@+id/edit_password"
        android:layout_toEndOf="@+id/user_info" />

    <Button
        android:text="@string/updatePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_password"
        android:onClick="onButtonClick"
        android:background="@color/seaGreen"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/return_home"
        android:layout_toStartOf="@+id/user_info" />

    <Button
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:onClick="onButtonClick"
        android:visibility="visible"
        android:background="@color/seaGreen"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/profile_picture"
        android:layout_alignEnd="@+id/profile_picture"
        android:layout_marginEnd="23dp" />

    <Button
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/return_home"
        android:onClick="onButtonClick"
        android:background="@color/seaGreen"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignBaseline="@+id/logout"
        android:layout_alignBottom="@+id/logout"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:srcCompat="@android:drawable/screen_background_dark"
        android:layout_alignTop="@+id/user_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />
    <Button
        android:id="@+id/picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/seaGreen"
        android:onClick="onButtonClick"
        android:text="Profile Picture"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignBaseline="@+id/logout"
        android:layout_alignBottom="@+id/logout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="6dp" />

</RelativeLayout>
